--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,11 +17,21 @@
   </head>
   <body>
     {{! navigation }}
-    <nav class='navbar navbar-dark bg-dark'>
+    <nav class='navbar navbar-light bg-light'>
       <div class='container'>
-        <a class='navbar-brand' href='#'>Restaurant List</a>
+        <a class='navbar-brand' href='/'>
+          <img
+            src='https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png'
+            width='30'
+            height='30'
+            class='d-inline-block align-top'
+            alt='好。吃'
+          />
+          我的餐廳清單
+        </a>
       </div>
     </nav>
+    <div class='banner'></div>
     {{! partial templates will replace the part of "body" here }}
     {{{body}}}
 
