--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,6 +21,13 @@
               ></i></button>
           </div>
         </div>
+        <div class='mt-2'>
+          <a
+            class='btn btn-success'
+            href='/restaurants/new'
+            role='button'
+          >新增餐廳 Add</a>
+        </div>
       </form>
     </div>
   </div>
