--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -37,31 +37,42 @@
 <div class='container mt-5'>
   <div class='row'>
     <div class='col-md-10 col-12 mx-auto'>
-      <div class='row row-cols-sm-3'>
+      <div class='row row-cols-1 row-cols-sm-3'>
         {{#each restaurants}}
-          <a href='/restaurants/{{this.id}}' class='text-secondary'>
-            <div class='card mb-3'>
+          <div class='col'>
+            <div class='card mb-1'>
               <img
                 class='card-img-top'
                 src='{{this.image}}'
                 alt='{{this.name}}'
               />
               <div class='card-body p-3'>
-                <h6 class='card-title mb-1'>{{this.name}}</h6>
-
+                <h6 class='card-title mb-1 text-secondary'>{{this.name}}</h6>
                 <div class='restaurant-category mb-1'>
                   <i class='fas fa-utensils pr-2'></i>
                   {{this.category}}
                 </div>
-
-                <span class='badge bg-danger'>
+                <span class='badge rounded-pill text-bg-danger'>
                   {{this.rating}}
                   <i class='fas fa-star fa-xs'></i>
                 </span>
-
+              </div>
+              <div class='card-footer d-flex justify-content-end flex-wrap'>
+                <a href='/restaurants/{{this._id}}'><button
+                    class='btn btn-primary btn-sm ms-2'
+                  >Details</button></a>
+                <form
+                  action='/restaurants/{{this._id}}?_method=DELETE'
+                  method='POST'
+                >
+                  <button
+                    type='submit'
+                    class='btn btn-danger btn-sm text-white ms-2'
+                  >Delete</button>
+                </form>
               </div>
             </div>
-          </a>
+          </div>
         {{/each}}
       </div>
     </div>
