--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -3,6 +3,10 @@
   <div class='row'>
     <div class='col-12 col-md-10 mx-auto'>
 
+      <a href='/restaurants/{{restaurant._id}}/edit'><button
+          class='btn btn-primary btn-sm mb-2'
+        >編輯 Edit</button></a>
+
       <p class='mb-1'>
         <span class='text-secondary'>
           <i class='fas fa-utensils pr-2'></i>
