--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -57,10 +57,13 @@
                   <i class='fas fa-star fa-xs'></i>
                 </span>
               </div>
-              <div class='card-footer d-flex justify-content-end flex-wrap'>
+              <div class='card-footer d-flex justify-content-center flex-wrap'>
                 <a href='/restaurants/{{this._id}}'><button
                     class='btn btn-primary btn-sm ms-2'
                   >Details</button></a>
+                <a href='/restaurants/{{this._id}}/edit'><button
+                    class='btn btn-primary btn-sm ms-2'
+                  >Edit</button></a>
                 <form
                   action='/restaurants/{{this._id}}?_method=DELETE'
                   method='POST'
