create delete function

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -65,8 +65,8 @@
                     class='btn btn-primary btn-sm ms-2'
                   >Edit</button></a>
                 <form
-                  action='/restaurants/{{this._id}}?_method=DELETE'
-                  method='POST'
+                  action='/restaurants/{{this._id}}/delete'
+                  method='GET'
                 >
                   <button
                     type='submit'
